[package]
name = "rapidxfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
bincode = "1.3"
bytes = "1.6"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.39", features = ["full"] }
